modules/cabotage/manifests/cabotage-app/05-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cabotage-app
    cabotage.io/infra: "true"
  namespace: cabotage
  name: cabotage-app
spec:
  ports:
  - port: 443
    targetPort: 8443
    name: https
  selector:
    app: cabotage-app
    component: web
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
