modules/cabotage/manifests/cabotage-app/05-ingress-funnel.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cabotage-app-funnel
  namespace: cabotage
  annotations:
    tailscale.com/funnel: "true"
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cabotage-app
                port:
                  name: https
  tls:
    - hosts:
        - cabotage-minikube
